Update 01-intro homework

--- a/01-intro/duration-prediction.ipynb
+++ b/01-intro/duration-prediction.ipynb
@@ -13,7 +13,7 @@
    "id": "0d7f956f-1d93-4152-83a9-e201ce0d6184",
    "metadata": {},
    "source": [
-    "**Download \"Yellow Taxi Trip Records\" data for January and February 2023, from https://www.nyc.gov/site/tlc/about/tlc-trip-record-data.page**"
+    "**Downloading the data \"Yellow Taxi Trip Records\" data for January and February 2023, from https://www.nyc.gov/site/tlc/about/tlc-trip-record-data.page**"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "id": "f38b8719-818e-4aba-8ef1-c0a910347b17",
    "metadata": {},
    "source": [
-    "**Calculate duration**"
+    "**Computing duration**"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "id": "8c7b5e4d-857c-4a2f-9cd7-46015c42389a",
    "metadata": {},
    "source": [
-    "**Remove outliers from `duration`**"
+    "**Droping outliers**"
    ]
   },
   {
